# Restify

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  app.db  create_fake_db.py  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt  sql.txt
app/: main.py
app/core/: config.py  deps.py  logging_config.py  rate_limit.py  security.py
app/db/: crud.py  session.py
app/models/: __init__.py  enums.py  places.py  reviews.py  users.py
app/parsers/: external_sources.py  geoapify_importer.py  parse_places.py
app/routers/: __init__.py  auth.py  chat.py  moderation.py  places.py  recommendations.py  reviews.py  users.py
app/schemas/: auth.py  chat.py  places.py  recommendations.py  reviews.py  users.py
app/services/: cache.py  llm.py  ratings.py  recommendations.py
app/static/: app.js  index.html  styles.css
fronted_flask/: api.py  app.py  config.py
fronted_flask/static/: style.css
fronted_flask/templates/: base.html  chat.html  index.html  login.html  moderation_places.html  moderations_review.html  place_detail.html  place_new.html  profile.html  recommendations.html  register.html
scripts/: import_places.py  set_role.py
tests/: conftest.py  test_auth.py  test_chat.py  test_places.py
